--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+logging.level.org.springframework=debug
+spring.profiles.active=prod
 
+currency-service.url=www.google.com
+currency-service.name=vatsal
+currency-service.key=learningSpring
+
+management.endpoints.web.exposure.include=health,metrics
